force-app/main/default/objects/Course_Master__c/fields/Average_review_rating__c.field-meta.xml
<CustomField>
    <fullName>Average_review_rating__c</fullName>
    <formula>Total_Reviews__c  /  Count_of_Ratings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Review Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>