force-app/main/default/objects/Course_Master__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <length>10</length>
    <type>Text</type>
</CustomField>