force-app/main/default/objects/Course_Master__c/fields/Course_Category__c.field-meta.xml
<CustomField>
    <fullName>Course_Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course Category</label>
    <referenceTo>Course_Category__c</referenceTo>
    <relationshipLabel>Course Masters</relationshipLabel>
    <relationshipName>Course_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>