force-app/main/default/objects/Course_Master__c/fields/Course_Price__c.field-meta.xml
<CustomField>
    <fullName>Course_Price__c</fullName>
    <label>Course Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>