force-app/main/default/objects/Course_Master__c/fields/Dummy_No_of_Students__c.field-meta.xml
<CustomField>
    <fullName>Dummy_No_of_Students__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dummy No of Students</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>