force-app/main/default/objects/Course_Master__c/fields/Total_Mentor_Enrolments__c.field-meta.xml
<CustomField>
    <fullName>Total_Mentor_Enrolments__c</fullName>
    <label>Total Mentors Enrolments</label>
    <summaryFilterItems>
        <field>Course_Enrollment__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Mentor</value>
    </summaryFilterItems>
    <summaryForeignKey>Course_Enrollment__c.Course_Master__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>