force-app/main/default/objects/Course_Master__c/fields/Total_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Total_Reviews__c</fullName>
    <label>Total Reviews</label>
    <summarizedField>Student_Feedback__c.Student_Rating__c</summarizedField>
    <summaryForeignKey>Student_Feedback__c.Course_Master__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>