force-app/main/default/objects/Course_Master__c/fields/Total_Session_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Session_Hours__c</fullName>
    <label>Total Session Hours</label>
    <length>8</length>
    <type>Text</type>
</CustomField>