force-app/main/default/objects/Course_Master__c/fields/Total_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Total_Sessions__c</fullName>
    <label>Total Session</label>
    <summarizedField>Course_Offering__c.Total_Sessions__c</summarizedField>
    <summaryForeignKey>Course_Offering__c.Course_Master__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>