force-app/main/default/objects/Course_Master__c/validationRules/CostPrice_NOTEqual_NUll_if_PaidCourse.validationRule-meta.xml
<ValidationRule>
    <fullName>CostPrice_NOTEqual_NUll_if_PaidCourse</fullName>
    <active>true</active>
    <description>if course is paid then cost of price should not be null</description>
    <errorConditionFormula>Paid_Course__c  = true &amp;&amp;  Course_Price__c  = NULL</errorConditionFormula>
    <errorMessage>Please enter the Course Price</errorMessage>
</ValidationRule>