force-app/main/default/objects/Course_Master__c/listViews/All_Courses.listView-meta.xml
<ListView>
    <fullName>All_Courses</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Course_Category__c</columns>
    <columns>Course_Price__c</columns>
    <columns>Discount__c</columns>
    <columns>Paid_Course__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Courses</label>
</ListView>